# iac-pattern-classification-with-llm

./: README.md  constants.py  main.py
steps/cloner/: constants.py  main.py  pyproject.toml
steps/labeler/: constants.py  main.py  pyproject.toml
steps/labeler/factory/: labeler_factory.py
steps/labeler/factory/labelers/: go_labeler.py  java_labeler.py  javascript_labeler.py  labeler.py  python_labeler.py  typescript_labeler.py
steps/mapper/: constants.py  main.py  pyproject.toml
steps/miner/: constants.py  errors.txt  java-repos.txt  main.py  mining.py  pyproject.toml  typescript-repos.txt
steps/miner/compare/: go-repos.csv  java-repos.csv  python-repos.csv  typescript-repos.csv
steps/miner/config/: headers.py
steps/miner/core/: Parser.py  sendRequest.py
steps/miner/outputs/: go-repos.csv  javascript-repos.csv  python-repos.csv  typescript-repos.csv
steps/trainer/: evalres.py  fine-tunning.ipynb  inference.sh  model.py  pattern_categorizer.ipynb  pyproject.toml  run.py  train.sh
steps/trainer/jsonl/: test.jsonl
