[tool.poetry]
name = "miner"
version = "0.1.0"
description = ""
authors = ["Felipe Diaz <luis.diaz-c@mail.escuelaing.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.28.2"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
