[tool.poetry]
name = "codebert-classification"
version = "0.1.0"
description = ""
authors = ["Felipe Diaz <lfeliped@amazon.com>"]
readme = "README.md"
packages = [{include = "codebert_classification"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
transformers = "^4.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
